Added News API Integration